# ephemera-social

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.android  LICENSE-APACHE  LICENSE-MIT  README.md  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml
crates/ephemera-abuse/: Cargo.toml
crates/ephemera-abuse/src/: error.rs  fingerprint.rs  lib.rs  pow.rs  rate_limit.rs  reputation.rs
crates/ephemera-cli/: Cargo.toml
crates/ephemera-cli/src/: main.rs
crates/ephemera-client/: Cargo.toml
crates/ephemera-client/frontend/: index.html
crates/ephemera-client/frontend/src/: app.js  mobile.css  qr-scanner.js  styles.css
crates/ephemera-client/frontend/src/views/: compose.js  connections.js  discover.js  feed.js  groups.js  messages.js  onboarding.js  profile.js  unlock.js
crates/ephemera-client/src/: commands.rs  lib.rs  main.rs  mobile.rs  platform.rs  server.rs  state.rs
crates/ephemera-client/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
crates/ephemera-client/src-tauri/capabilities/: default.json
crates/ephemera-client/src-tauri/src/: lib.rs  main.rs
crates/ephemera-config/: Cargo.toml
crates/ephemera-config/src/: config_tests.rs  lib.rs  subsystems.rs
crates/ephemera-crdt/: Cargo.toml
crates/ephemera-crdt/src/: clock.rs  gcounter.rs  lib.rs  lwwregister.rs  orset.rs
crates/ephemera-crypto/: Cargo.toml
crates/ephemera-crypto/src/: device.rs  device_tests.rs  dh.rs  encryption.rs  epoch.rs  epoch_crypto.rs  epoch_tests.rs  error.rs  export.rs  export_tests.rs  hash.rs  identity.rs  keys.rs  keys_tests.rs  keystore.rs  lib.rs  pow.rs  signing.rs
crates/ephemera-dht/: Cargo.toml
crates/ephemera-dht/src/: lib.rs  query.rs  routing.rs  routing_tests.rs  storage.rs
crates/ephemera-events/: Cargo.toml
crates/ephemera-events/src/: lib.rs
crates/ephemera-gossip/: Cargo.toml
crates/ephemera-gossip/src/: fanout.rs  lib.rs  plumtree.rs  service.rs  service_tests.rs  topic.rs
crates/ephemera-gossip/tests/: network_integration.rs
crates/ephemera-media/: Cargo.toml
crates/ephemera-media/src/: chunker.rs  exif.rs  integration_tests.rs  lib.rs  pipeline.rs  resize.rs  validation.rs  video.rs  video_metadata.rs  video_validation.rs
crates/ephemera-media/src/test_mp4/: atoms.rs  mod.rs
crates/ephemera-message/: Cargo.toml
crates/ephemera-message/src/: conversation.rs  dead_drop.rs  dead_drop_tests.rs  encryption.rs  error.rs  lib.rs  message.rs  prekey.rs  protocol_tests.rs  ratchet.rs  ratchet_tests.rs  request.rs  sealed.rs  service.rs  service_extra.rs  service_tests.rs  service_tests_extra.rs  session.rs  session_tests.rs  x3dh.rs  x3dh_tests.rs
crates/ephemera-mod/: Cargo.toml
crates/ephemera-mod/src/: blocklist.rs  error.rs  filter.rs  lib.rs  report.rs
crates/ephemera-node/: Cargo.toml
crates/ephemera-node/src/: background.rs  background_dht.rs  debug_log.rs  dht_query.rs  gossip_ingest.rs  lib.rs  message_ingest.rs  mobile.rs  network.rs  rpc.rs  rpc_auth.rs  startup.rs  startup_tests.rs
crates/ephemera-node/src/api/: api_tests.rs  content.rs  dht.rs  meta.rs  mod.rs  network.rs  social.rs
crates/ephemera-node/src/services/: dht.rs  error.rs  feed.rs  handle.rs  identity.rs  media.rs  mod.rs  notifications.rs  post.rs  social.rs
crates/ephemera-node/tests/: abuse_enforcement.rs  core_loop.rs  dht_wiring.rs  gossip_pipeline.rs  media_pipeline.rs  message_delivery.rs  network_rpc.rs  node_lifecycle.rs
crates/ephemera-post/: Cargo.toml
crates/ephemera-post/src/: builder.rs  canonical.rs  content.rs  lib.rs  post.rs  validation.rs
crates/ephemera-protocol/: Cargo.toml
crates/ephemera-protocol/src/: codec.rs  envelope.rs  lib.rs  messages.rs  version.rs
crates/ephemera-social/: Cargo.toml
crates/ephemera-social/src/: block.rs  connection.rs  feed.rs  group.rs  group_chat.rs  handle.rs  handle_validation.rs  handle_validation_tests.rs  interaction.rs  invite.rs  lib.rs  mention.rs  profile.rs  topic_room.rs
crates/ephemera-social/src/store/: block.rs  connection.rs  feed.rs  feed_discover.rs  group.rs  group_chat.rs  mention.rs  mod.rs  reaction.rs  store_tests.rs  store_tests_extra.rs  topic_room.rs
crates/ephemera-store/: Cargo.toml
crates/ephemera-store/src/: content_store.rs  content_store_tests.rs  gc.rs  gc_tests.rs  gc_tests_extra.rs  lib.rs  media_store.rs  metadata.rs  metadata_tests.rs  migrations.rs  query.rs  query_tests.rs
crates/ephemera-test-utils/: Cargo.toml
crates/ephemera-test-utils/src/: assertions.rs  fixtures.rs  harness.rs  lib.rs  node.rs  node_tests.rs
crates/ephemera-test-utils/tests/: smoke_test.rs
crates/ephemera-transport/: Cargo.toml
crates/ephemera-transport/src/: config.rs  connection.rs  discovery.rs  error.rs  iroh_transport.rs  lib.rs  manager.rs  nat.rs  peer.rs  tcp.rs  tcp_tests.rs  tcp_transport.rs
crates/ephemera-transport/tests/: iroh_connect.rs
crates/ephemera-types/: Cargo.toml
crates/ephemera-types/src/: content.rs  error.rs  id.rs  identity.rs  lib.rs  network.rs  timestamp.rs  ttl.rs
docs/: MOBILE_BUILD.md
docs/architecture/: 01_identity_crypto.md  02_network_protocol.md  03_storage_data.md  04_social_features.md  05_moderation_safety.md  06_client_api.md  07_rust_workspace.md  08_trust_safety.md  ARCHITECTURE.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_handle_format.rs  fuzz_media_validation.rs  fuzz_post_validation.rs  fuzz_protocol_decode.rs
proto/: ephemera.proto
scripts/: architecture_check.sh  build_android.sh  check_quality.sh  docker_test_helpers.sh  docker_test_social.sh  mobile_test_social.sh  run_demo.sh  test_coverage.sh
tests/integration/: adversarial.rs  mod.rs  multi_node.rs  smoke_test.rs
