[package]
name = "ephemera-cli"
description = "CLI tool for the Ephemera decentralized social platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ephemera"
path = "src/main.rs"

[dependencies]
ephemera-node = { workspace = true }
ephemera-config = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
