[package]
name = "ephemera-client"
description = "Desktop client for the Ephemera platform — serves the SolidJS frontend and embeds the node"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ephemera"
path = "src/main.rs"

[dependencies]
ephemera-node = { workspace = true }
ephemera-config = { workspace = true }
ephemera-events = { workspace = true }
ephemera-store = { workspace = true }
ephemera-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

# HTTP server for serving the frontend and JSON-RPC endpoint
axum = { version = "0.8", features = ["json"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "set-header"] }
mime_guess = "2"

# Open browser
open = "5"

# Embed frontend files at compile time
rust-embed = { version = "8", features = ["interpolate-folder-path"] }

[lints]
workspace = true
