[package]
name = "ephemera-config"
description = "Configuration management for the Ephemera decentralized social platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ephemera-types = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
