[package]
name = "ephemera-message"
description = "Private messaging protocol for the Ephemera platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ephemera-types = { workspace = true }
ephemera-crypto = { workspace = true }
ephemera-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
rusqlite = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
