[package]
name = "ephemera-post"
description = "Post data model and validation for Ephemera"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-utils = []

[dependencies]
ephemera-types = { workspace = true }
ephemera-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ephemera-abuse = { workspace = true }

[lints]
workspace = true
