[package]
name = "ephemera-test-utils"
description = "Test infrastructure for the Ephemera decentralized social platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ephemera-node = { workspace = true }
ephemera-types = { workspace = true }
ephemera-crypto = { workspace = true }
ephemera-config = { workspace = true }
ephemera-store = { workspace = true }
ephemera-events = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
image = { workspace = true }

[dev-dependencies]
ephemera-abuse = { workspace = true }
ephemera-post = { workspace = true }
ephemera-media = { workspace = true }
ephemera-protocol = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }

[[test]]
name = "adversarial"
path = "../../tests/integration/adversarial.rs"

[lints]
workspace = true
