[package]
name = "ephemera-transport"
description = "QUIC transport layer for the Ephemera P2P network"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ephemera-types = { workspace = true }
ephemera-protocol = { path = "../ephemera-protocol" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
bytes = "1"
iroh = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
