[package]
name = "ephemera-types"
description = "Shared primitive types for the Ephemera decentralized social platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
